--- a/language_modelling_R204445V.ipynb
+++ b/language_modelling_R204445V.ipynb
@@ -33,7 +33,7 @@
         "outputId": "df5f0516-39fe-47c5-e306-0e85d299c387"
       },
       "id": "eeDrQvoOP7T5",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -65,7 +65,7 @@
         "outputId": "194ac94e-cb36-4553-d9f9-1b628d5c8877"
       },
       "id": "ex_1MWtYDIN6",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
         "outputId": "dac04b0c-ba94-46e9-e024-4781ab505c0e"
       },
       "id": "0POxww-fDwSV",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "a930081c",
       "metadata": {
         "id": "a930081c"
@@ -148,7 +148,7 @@
         "outputId": "85c44382-65c1-4577-abec-79e247be847b"
       },
       "id": "oIG-fCETQIy2",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +185,7 @@
         "id": "5M39dZq2QBqG"
       },
       "id": "5M39dZq2QBqG",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +197,7 @@
         "id": "dWWz75M-QR2W"
       },
       "id": "dWWz75M-QR2W",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
         "outputId": "80147297-cd32-47c9-e672-1f90b347a80d"
       },
       "id": "Su8D38UaQUsl",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +284,7 @@
         "id": "UHnILhZgQasm"
       },
       "id": "UHnILhZgQasm",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,7 +301,7 @@
         "outputId": "21f130b4-225d-4f41-ba7d-9d4bb7d7bad8"
       },
       "id": "9PRQUWRnQdNv",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -320,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "dfdffef8",
       "metadata": {
         "id": "dfdffef8"
@@ -347,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "f6e79b35",
       "metadata": {
         "id": "f6e79b35"
@@ -384,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "8095c8fb",
       "metadata": {
         "id": "8095c8fb"
@@ -416,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "90591dd3",
       "metadata": {
         "id": "90591dd3"
@@ -459,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "eb129419",
       "metadata": {
         "id": "eb129419",
@@ -5495,6 +5495,7 @@
         "num_batches = len(input_sequences) // batch_size + (len(input_sequences) % batch_size != 0)\n",
         "\n",
         "# Loop over batches and train the model on each batch\n",
+        "#this is also where we implement chucking to train our datset in batches because of our memory constraints\n",
         "for i in range(num_batches):\n",
         "    start_idx = i * batch_size\n",
         "    end_idx = start_idx + batch_size\n",
@@ -5525,7 +5526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "79cddef6",
       "metadata": {
         "id": "79cddef6",
@@ -5603,7 +5604,7 @@
         }
       },
       "id": "SqPNv34DFt8l",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6015,7 +6016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "7a7969ec",
       "metadata": {
         "id": "7a7969ec"
@@ -6047,7 +6048,7 @@
         }
       },
       "id": "ms8OmtKbGmGl",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6081,7 +6082,7 @@
         "outputId": "400f9ff4-1a55-48db-a2cb-6c13b1343bbd"
       },
       "id": "hNBjuKGF25AO",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6151,7 +6152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "id": "9d6e8fe0",
       "metadata": {
         "id": "9d6e8fe0",
@@ -6177,6 +6178,16 @@
         "print(f\"Model 1 has {params_model1} parameters.\")\n",
         "print(f\"Model 2 has {params_model2} parameters.\")\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If you want to test the model here"
+      ],
+      "metadata": {
+        "id": "-pXEOuyUpf2e"
+      },
+      "id": "-pXEOuyUpf2e"
     },
     {
       "cell_type": "code",
@@ -6209,7 +6220,7 @@
         "\n",
         "    Args:\n",
         "    - model (keras.Model): The trained model.\n",
-        "    - tokenizer (Tokenizer): The tokenizer object used for preprocessing.\n",
+        "    - tokenizer (Tokenizer): The tokenizer used for preprocessing.\n",
         "    - text (str): The input text.\n",
         "    - num_words (int): The number of words to predict.\n",
         "\n",
